clean up service layer: improve comments and error messages